--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -2,7 +2,8 @@
   width: 280px;
   padding: 0 20px;
   margin: 0 auto;
-  margin-bottom: 11px;
+  padding-top: 30px;
+  padding-bottom: 24px;
 }
 
 .address__wrapper {
@@ -15,7 +16,8 @@
   .address {
     width: 707px;
     padding: 0 30px;
-    margin-bottom: 57px;
+    padding-top: 70px;
+    padding-bottom: 58px;
   }
 
   .address__сity {
