--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -8,6 +8,7 @@
 
 .page-main__program-type-wrapper {
   margin-bottom: 28px;
+  padding: 0 20px;
 }
 
 .page-main__wrapper {
@@ -43,6 +44,8 @@
 
 .page-main__example {
   background-color: @background-grey;
+  padding-top: 28px;
+  padding-bottom: 35px;
 }
 
 
