--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -2,6 +2,8 @@
   border-bottom: 1px solid @border-grey;
   padding-top: 23px;
   padding-bottom: 22px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 
@@ -13,6 +15,9 @@
   .site-menu__item {
     border: none;
     padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
   }
 
   .site-menu__item--active {
@@ -23,8 +28,8 @@
       display: block;
       position: absolute;
       width: 63px;
-      height: 2px;
-      left: 0;
+      height: 3px;
+      left: 6px;
       top: 30px;
       background-color: @basic_green;
     }
@@ -50,6 +55,9 @@
     border: none;
     padding: 0;
     z-index: 1;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
   }
 
   .site-menu__link {
@@ -69,7 +77,7 @@
       position: absolute;
       width: 68px;
       height: 2px;
-      left: 0;
+      left: 6px;
       top: 35px;
       background-color: @basic-white;
     }
