--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,15 +8,16 @@
 @media (min-width: @tablet-width) {
   .main-nav__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    width: 440px;
+    width: 450px;
     margin-top: 19px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .main-nav__list {
-    width: 478px;
+    width: 484px;
     display: flex;
     justify-content: space-between;
   }
