--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,29 +5,40 @@
   color: @special-black;
   width: 140px;
   margin: 0;
-  padding-top: 32px;
 }
 
 .page-footer__text {
   line-height: 20px;
   width: 140px;
-  padding-top: 15px;
+  margin: 0;
 }
 
 .page-footer__container {
   background-color: @basic_grey;
 }
 
-.page__footer-wrapper {
+.page-footer__wrapper {
   padding: 0 20px;
   margin: 0 auto;
   width: 280px;
+  padding-top: 40px;
+  padding-bottom: 16px;
+}
+
+.page-footer__map {
+  width: 100%;
+  height: 362px;
+}
+
+.page-footer__logo {
+  display: block;
+  width: 128px;
+  height: 24px;
+  margin: 0 auto;
+  padding-bottom: 16px;
 }
 
 .page-footer__logo-image {
-  padding-top: 40px;
-  padding-bottom: 16px;
-  margin: 0 auto;
   width: 128px;
   height: 24px;
   text-align: center;
@@ -89,20 +100,24 @@
     text-align: right;
   }
 
-  .page-footer__address {
-    margin-bottom: 11px;
-  }
-
   .page-footer__map {
-    width: 768px;
+    width: 100%;
     height: 400px;
   }
 
-  .page__footer-wrapper {
+  .page-footer__wrapper {
     width: 707px;
     padding: 0 30px;
     padding-top: 60px;
     margin: 0 auto;
+  }
+
+  .page-footer__logo {
+    display: block;
+    width: 128px;
+    height: 24px;
+    padding: 0;
+    margin: 0;
   }
 
   .page-footer__logo-image {
@@ -111,6 +126,11 @@
     margin: 0 auto;
     width: 128px;
     height: 24px;
+  }
+
+  .page-footer__wrapper--flex {
+    display: flex;
+    justify-content: space-between;
   }
 
   .page-footer__copyright-link {
@@ -129,7 +149,7 @@
     position: relative;
   }
 
-  .page__footer-wrapper {
+  .page-footer__wrapper {
     width: 1220px;
     padding: 0 110px;
     margin: 0 auto;
@@ -161,6 +181,14 @@
     margin: 0;
     margin-left: 76px;
     margin-top: 36px;
+  }
+
+  .page-footer__logo {
+    display: block;
+    width: 128px;
+    height: 24px;
+    padding: 0;
+    margin: 0;
   }
 
   .page-footer__text {
