--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,10 +1,20 @@
 .program {
   color: @basic-white;
   font-family: @oswald;
-  background-color: linear-gradient(@basic_green 60%, @basic-white 60%);
   background-image: url("../img/mobile-index-cat.png");
   background-repeat: no-repeat;
   margin-bottom: 22px;
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 302px;
+    background-color: green;
+  }
 }
 
 .program__wrapper-title {
@@ -17,6 +27,12 @@
   line-height: 36px;
 }
 
+.program__wrapper {
+  position: relative;
+  width: 280px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
 
 .program__text {
   text-transform: uppercase;
@@ -27,6 +43,7 @@
 }
 
 .program__image {
+  display: block;
   width: 280px;
   height: 270px;
   margin-bottom: 7px;
@@ -45,11 +62,24 @@
 @media (min-width: @tablet-width) {
   .program {
     background-image: none;
-    margin-bottom: 1px;
+    margin-bottom: 0;
+
+    &::before {
+      content: "";
+      display: none;
+      position: absolute;
+      z-index: -1;
+      width: 100%;
+      height: 302px;
+      background-color: green;
+    }
   }
 
   .program__wrapper {
     position: relative;
+    width: 707px;
+    padding: 0 30px;
+    margin: 0 auto;
   }
 
 
@@ -57,9 +87,9 @@
     color: @basic-black;
     margin: 0;
     padding: 0;
-    margin-left: 44px;
-    margin-bottom: 41px;
+    margin-bottom: 40px;
     text-align: left;
+    margin-left: 86px;
     font-weight: 400;
     width: 414px;
     font-size: 60px;
@@ -72,7 +102,7 @@
     font-size: 20px;
     line-height: 20px;
     margin: 0;
-    margin-left: 45px;
+    margin-left: 88px;
     margin-bottom: 18px;
     text-align: left;
   }
@@ -93,7 +123,7 @@
     line-height: 20px;
     padding-top: 17px;
     padding-bottom: 17px;
-    margin-left: 38px;
+    margin-left: 40px;
     position: absolute;
     top: 229px;
     left: 71px;
@@ -108,6 +138,9 @@
   }
 
   .program__wrapper {
+    width: 1220px;
+    padding: 0 110px;
+    margin: 0 auto;
     position: relative;
   }
 
