--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -3,15 +3,17 @@
   flex-wrap: wrap;
   list-style: none;
   align-items: center;
-  padding-left: 72px;
+  padding: 0;
+  justify-content: center;
   padding-top: 22px;
-  padding-bottom: 16px;
+  padding-bottom: 6px;
   margin-bottom: 30px;
   border-top: 1px solid @border-dark-grey;
   border-bottom: 1px solid @border-dark-grey;
 }
 
 .social-list__social-item {
+  margin-bottom: 10px;
   margin-right: 37px;
 
   &:last-child {
