--- a/source/less/blocks/toggle-controls.less
+++ b/source/less/blocks/toggle-controls.less
@@ -1,8 +1,8 @@
 .toggle-controls {
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  display: grid;
-  margin-left: 38px;
-  grid-template-columns: min-content min-content min-content;
+  justify-content: center;
 }
 
 .toggle-controls__scale {
@@ -20,6 +20,7 @@
   width: 35px;
   height: 6px;
   border-radius: 6px;
+  border: none;
   background-color: @basic_green;
   position: absolute;
   top: 4px;
@@ -28,7 +29,7 @@
 
 .toggle-controls__it-was-after {
   border: none;
-  background-color: @background-grey;
+  background-color: transparent;
   font-family: @oswald;
   color: @basic-black;
   text-transform: uppercase;
@@ -42,7 +43,6 @@
     display: grid;
     margin: 0;
     padding: 0;
-    margin-left: 68px;
     grid-template-columns: min-content min-content min-content;
   }
 
@@ -76,6 +76,38 @@
 
 @media (min-width: @desktop-width) {
   .toggle-controls {
-    margin-left: 109px;
+    display: grid;
+    margin: 0;
+    padding: 0;
+    margin-left: 110px;
+    margin-top: 31px;
+    grid-template-columns: min-content min-content min-content;
+  }
+
+  .toggle-controls__scale {
+    width: 428px;
+    height: 6px;
+    border: none;
+    border-radius: 6px;
+    background-color: @toogle-border-grey;
+    position: relative;
+    margin-left: 26px;
+    margin-right: 19px;
+  }
+
+  .toggle-controls__bar {
+    display: none;
+  }
+
+  .toggle-controls__it-was-after {
+    border: none;
+    border-bottom: 1px dotted @toogle-border-grey;
+    padding: 0;
+    background-color: @background-grey;
+    font-family: @oswald;
+    color: @basic-black;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 30px;
   }
 }
